feat: user services and a little role services #6
