# internal/delivery/http/route/route.go
@@ -3,22 +3,25 @@ package route
 import (
 	"github.com/gin-gonic/gin"
 	"github.com/respati123/money-tracking/internal/delivery/http"
-	"github.com/respati123/money-tracking/internal/delivery/http/middleware"
 	swaggerFiles "github.com/swaggo/files"
 	ginSwagger "github.com/swaggo/gin-swagger"
 )
 
 type RouteConfig struct {
 	App            *gin.Engine
-	UserController http.UserController
-	AuthController http.AuthController
-	//
-	TraceIdMiddleware gin.HandlerFunc
+	UserController *http.UserController
+	AuthController *http.AuthController
+	RoleController *http.RoleController
+
+	// middleware
+	TraceIdMiddleware  gin.HandlerFunc
+	ResponseMiddleware gin.HandlerFunc
+	AuthMiddleware     gin.HandlerFunc
 }
 
 func (c *RouteConfig) Setup() {
-	c.App.Use(middleware.NewTraceMiddleware())
-	c.App.Use(middleware.ResponseMiddleware())
+	c.App.Use(c.TraceIdMiddleware)
+	c.App.Use(c.ResponseMiddleware)
 	c.SetupPublicRoute()
 	c.SetupPrivateRoute()
 	c.SetupSwagger()
@@ -34,8 +37,18 @@ func (c *RouteConfig) SetupPublicRoute() {
 }
 
 func (c *RouteConfig) SetupPrivateRoute() {
-	c.App.GET("/api/v1/users/:user_code", c.UserController.GetUser)
-	c.App.POST("/api/v1/users", c.UserController.CreateUser)
-	c.App.PUT("/api/v1/users/:uuid", c.UserController.UpdateUser)
-	c.App.DELETE("/api/v1/users/:uuid", c.UserController.DeleteUser)
+	protected := c.App.Group("")
+	protected.Use(c.AuthMiddleware)
+
+	users := protected.Group("/api/v1/users")
+	users.POST("/list", c.UserController.GetListUser)
+	users.POST("/", c.UserController.CreateUser)
+	users.DELETE("/:uuid", c.UserController.Delete)
+	users.PUT("/:uuid", c.UserController.Update)
+	users.GET("/:user_code", c.UserController.GetUser)
+
+	roles := protected.Group("/api/v1/roles")
+	{
+		roles.POST("/", c.RoleController.Create)
+	}
 }
